# swarm_simulator

./: CMakeLists.txt  README.md  README.md~  package.xml
.github/: PULL_REQUEST_TEMPLATE
launch/: one_swarmRobot.launch  singlerobot.launch  swarm.launch
model/: model-1_4.sdf
msg/: obstacleData.msg  obstacleList.msg  polarCoordinates.msg
scripts/: generator.py  generator.sh
scripts/git/: install-pre-commit.sh  pre-commit.sh
sdf/: swarmRobot.sdf
src/: Astar_new.cpp  eightform.cpp  get_path.cpp  motion_simu.cpp  pathplanner.h  smooth_path.cpp  swarm_bot.cpp  swarm_bot.cpp~  swarm_simulator.cpp
world/: arena.world
